add disable-days-before-today attribute

--- a/src/index.hbs
+++ b/src/index.hbs
@@ -8,7 +8,7 @@
 </head>
 
 <body>
-    <date-picker id="date-picker" show-fill-days="true"></date-picker>
+    <date-picker id="date-picker" show-fill-days="true" disable-days-before-today="false"></date-picker>
 
     <script>
         window.onload = function () {
