add primary and secondary color

--- a/src/index.hbs
+++ b/src/index.hbs
@@ -8,7 +8,12 @@
 </head>
 
 <body>
-    <date-picker id="date-picker" show-fill-days="true" disable-days-before-today="false"></date-picker>
+    <date-picker
+        id="date-picker"
+        primary-color="#000"
+        secondary-color="#999"
+        show-fill-days="true"
+        disable-days-before-today="false"></date-picker>
 
     <script>
         window.onload = function () {
