add attributes/properties to set custom colors

--- a/src/index.hbs
+++ b/src/index.hbs
@@ -13,6 +13,11 @@
         primary-color="#000"
         secondary-color="#999"
         show-fill-days="true"
+        header-text-color="#000"
+        disabled-text-color="#eee"
+        day-text-color="#333"
+        selected-text-color="#fff"
+        selected-border-color="blue"
         disable-days-before-today="false"></date-picker>
 
     <script>
