--- a/src/index.hbs
+++ b/src/index.hbs
@@ -5,21 +5,27 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="content-type" content="text/html; charset=utf-9">
     <title>"{{htmlWebpackPlugin.options.title}}"</title>
+
+    <style>
+        #date-picker {
+            width: 350px;
+        }
+    </style>
 </head>
 
 <body>
     <date-picker
         id="date-picker"
-        primary-color="#000"
-        secondary-color="#999"
         show-fill-days="true"
-        header-text-color="#000"
+        header-text-color="#fff"
         disabled-text-color="#eee"
         day-text-color="#333"
-        selected-text-color="#fff"
-        selected-border-color="blue"
+        selected-text-color="#000"
+        primary-color="#E9C061"
+        secondary-color="#E9C061"
+        month-name-background="#E9B947"
+        day-names-background="#01123F"
         disable-days-before-today="false"></date-picker>
-
     <script>
         window.onload = function () {
             const root = document.getElementById('date-picker');
